Fix: React select component overflow & tweaks

--- a/apps/project/src/index.css
+++ b/apps/project/src/index.css
@@ -27,3 +27,7 @@
   left: 0.5em;
   margin-right: -50%;
 }
+
+.react-calendar {
+  border: none;
+}
